# colorir

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README.pt.md  docker-compose.yml  pyproject.toml
coloured_drawings/: __init__.py  cli.py  config.py  image_utils.py  opener.py  pipeline.py  utils.py
coloured_drawings/lineart/: __init__.py  converter.py
coloured_drawings/printing/: __init__.py  pdf.py
coloured_drawings/sources/: __init__.py  ai_generator.py  base.py  watermark_detector.py  web_search.py
docs/: decisions.md  implementation.md  roadmap.md  security-audit.md
tests/: test_image_utils.py  test_lineart.py  test_pdf.py  test_utils.py  test_watermark_detector.py
