[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coloured-drawings"
version = "0.1.0"
description = "Turn any idea into a printable coloring page — just type what you want to draw"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12,<1",
    "pillow>=10.3,<13",
    "opencv-python-headless>=4.9,<6",
    "numpy>=1.26,<3",
    "requests>=2.32.4,<3",
    "ddgs>=9.0,<10",
    "openai>=1.30,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
colorir = "coloured_drawings.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["coloured_drawings"]
